--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     let velocidadEscritura = 100;
     let borrando = false;
     let borrarDesde = null;
-    let borrarHasta = null;
     let esperando = false;
     let tiempoEspera = 0;
     let borrandoFinal = false;
@@ -87,7 +86,7 @@
           document.getElementById("scrollContainer").style.pointerEvents = "auto";
         }
 
-        // Crear fuegos artificiales
+        // Fuegos artificiales
         for (let i = 0; i < 80; i++) {
           fuegos.push({
             x: mouseX,
@@ -104,30 +103,33 @@
     function draw() {
       background(0, 100);
 
-      // Contador
       fill(255);
       textSize(20);
       textAlign(LEFT, TOP);
       text("Clics: " + clickCount, 20, 20);
 
-      // Lluvia
       if (!mostrarDedicatoria) {
         textAlign(CENTER, CENTER);
         textSize(28);
-        if (frameCount % 3 === 0) {
-          for (let i = 0; i < 3; i++) {
-            let x = random(width);
-            let y = -50;
-            let speed = random(2, 6);
-            let color = random(coloresDedicatoria);
-            gotas.push({ x, y, speed, alpha: 255, color });
-          }
+        if (frameCount % 5 === 0) {
+          let x = random(width);
+          let y = -50;
+          let speed = random(2, 6);
+          gotas.push({ x, y, speed, alpha: 255, frase: mensajeActual });
         }
 
         for (let i = gotas.length - 1; i >= 0; i--) {
           let g = gotas[i];
-          fill(color(g.color + hex(floor(g.alpha), 2)));
-          text(mensajeActual, g.x, g.y);
+          push();
+          translate(g.x, g.y);
+          for (let j = 0; j < g.frase.length; j++) {
+            let letra = g.frase[j];
+            let offsetX = textWidth(g.frase.substring(0, j)) - textWidth(g.frase) / 2;
+            fill(random(coloresDedicatoria) + hex(floor(g.alpha), 2));
+            text(letra, offsetX, 0);
+          }
+          pop();
+
           g.y += g.speed;
           g.alpha -= 2;
           if (g.alpha <= 0 || g.y > height + 50) {
@@ -152,7 +154,6 @@
         }
       }
 
-      // Dedicatoria
       if (mostrarDedicatoria && !borrandoFinal) {
         if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
           textoVisible += textoBase[indexLetra];
@@ -163,7 +164,6 @@
         for (let parte of partesABorrar) {
           if (!parte.borrado && textoVisible.includes(parte.texto)) {
             borrarDesde = textoVisible.lastIndexOf(parte.texto);
-            borrarHasta = borrarDesde + parte.texto.length;
             esperando = true;
             tiempoEspera = millis();
             parte.borrado = true;
@@ -197,7 +197,6 @@
           tiempoEscritura = millis();
         }
 
-        // Texto con efecto de colores
         let dedicatoriaHTML = "";
         for (let c of textoVisible) {
           let color = random(coloresDedicatoria);
