--- a/index.html
+++ b/index.html
@@ -37,16 +37,14 @@
     <div id="dedicatoria"></div>
   </div>
   <script>
-    let frases = ["Hola Yareni ;)", "Feliz cumpleaños"];
+    let frases = ["Hola Yareni :D", "Feliz cumpleaños"];
     let clickCount = 0;
     let fraseIndex = 0;
     let mensajeActual = frases[fraseIndex];
     let gotas = [];
-    let fuegos = [];
+    let explosiones = [];
     let mostrarDedicatoria = false;
     let mensajeFinalizado = false;
-
-    let coloresDedicatoria = ["#ff8080", "#ff4da6", "#ff00ff"];
 
     let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te haya gustado el código que te hice :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá tener la oportunidad de conocernos más muy pronto ... Atte Caleb ... Por cierto hace mucho que no hacía una carta o algo de ese estilo ...";
     let textoVisible = "";
@@ -55,9 +53,12 @@
     let velocidadEscritura = 100;
     let borrando = false;
     let borrarDesde = null;
+    let borrarHasta = null;
     let esperando = false;
     let tiempoEspera = 0;
+    let finalizado = false;
     let borrandoFinal = false;
+    let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"];
 
     let partesABorrar = [
       { texto: "Se te quiere", borrado: false },
@@ -77,85 +78,87 @@
     function mousePressed() {
       if (!mostrarDedicatoria) {
         clickCount++;
-       if (clickCount % 2 === 0) {
-  fraseIndex = (fraseIndex + 1) % frases.length;
-  mensajeActual = frases[fraseIndex];
-  gotas = []; // Limpia las gotas anteriores
-}
+        if (clickCount % 2 === 0) {
+          fraseIndex = (fraseIndex + 1) % frases.length;
+          mensajeActual = frases[fraseIndex];
+        }
         if (clickCount >= 30) {
           mostrarDedicatoria = true;
           document.getElementById("scrollContainer").style.pointerEvents = "auto";
         }
 
-        for (let i = 0; i < 80; i++) {
-          fuegos.push({
+        // Crear explosión en la posición del clic
+        let particulas = [];
+        for (let i = 0; i < 30; i++) {
+          particulas.push({
             x: mouseX,
             y: mouseY,
             angle: random(TWO_PI),
             speed: random(2, 6),
             alpha: 255,
-            color: random(coloresDedicatoria)
+            size: random(4, 8)
           });
         }
+        explosiones.push(particulas);
       }
     }
 
     function draw() {
       background(0, 100);
 
+      // Mostrar contador
       fill(255);
       textSize(20);
       textAlign(LEFT, TOP);
       text("Clics: " + clickCount, 20, 20);
 
+      // Lluvia de frases
       if (!mostrarDedicatoria) {
         textAlign(CENTER, CENTER);
         textSize(28);
+
         if (frameCount % 5 === 0) {
           let x = random(width);
           let y = -50;
           let speed = random(2, 6);
-          gotas.push({ x, y, speed, alpha: 255, frase: mensajeActual });
+          gotas.push({ x, y, speed, alpha: 255 });
         }
 
         for (let i = gotas.length - 1; i >= 0; i--) {
           let g = gotas[i];
-          push();
-          translate(g.x, g.y);
-          let totalWidth = textWidth(g.frase);
-          let currentX = -totalWidth / 2;
-          for (let j = 0; j < g.frase.length; j++) {
-            let letra = g.frase[j];
-            let w = textWidth(letra);
-            fill(color(random(coloresDedicatoria) + hex(floor(g.alpha), 2)));
-            text(letra, currentX + w / 2, 0);
-            currentX += w;
+          let totalWidth = textWidth(mensajeActual);
+          for (let j = 0; j < mensajeActual.length; j++) {
+            let letra = mensajeActual[j];
+            let color = random(coloresTexto);
+            fill(color + hex(g.alpha, 2));
+            text(letra, g.x - totalWidth / 2 + textWidth(mensajeActual.slice(0, j)), g.y);
           }
-          pop();
-
           g.y += g.speed;
-          g.alpha -= 2;
+          g.alpha -= 1.5;
           if (g.alpha <= 0 || g.y > height + 50) {
             gotas.splice(i, 1);
           }
         }
 
-        for (let i = fuegos.length - 1; i >= 0; i--) {
-          let f = fuegos[i];
-          let vx = cos(f.angle) * f.speed;
-          let vy = sin(f.angle) * f.speed;
-          f.x += vx;
-          f.y += vy;
-          f.alpha -= 4;
-          fill(color(f.color + hex(floor(f.alpha), 2)));
-          noStroke();
-          ellipse(f.x, f.y, 4);
-          if (f.alpha <= 0) {
-            fuegos.splice(i, 1);
+        // Explosiones tipo fuegos artificiales
+        for (let e = explosiones.length - 1; e >= 0; e--) {
+          let particulas = explosiones[e];
+          for (let p of particulas) {
+            let color = random(coloresTexto);
+            fill(color + hex(p.alpha, 2));
+            noStroke();
+            ellipse(p.x, p.y, p.size);
+            p.x += cos(p.angle) * p.speed;
+            p.y += sin(p.angle) * p.speed;
+            p.alpha -= 5;
+          }
+          if (particulas.every(p => p.alpha <= 0)) {
+            explosiones.splice(e, 1);
           }
         }
       }
 
+      // Dedicatoria
       if (mostrarDedicatoria && !borrandoFinal) {
         if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
           textoVisible += textoBase[indexLetra];
@@ -166,6 +169,7 @@
         for (let parte of partesABorrar) {
           if (!parte.borrado && textoVisible.includes(parte.texto)) {
             borrarDesde = textoVisible.lastIndexOf(parte.texto);
+            borrarHasta = borrarDesde + parte.texto.length;
             esperando = true;
             tiempoEspera = millis();
             parte.borrado = true;
@@ -173,7 +177,7 @@
           }
         }
 
-        if (esperando && millis() - tiempoEspera >= 1300) {
+        if (esperando && millis() - tiempoEspera >= 3000) {
           borrando = true;
           esperando = false;
         }
@@ -201,7 +205,7 @@
 
         let dedicatoriaHTML = "";
         for (let c of textoVisible) {
-          let color = random(coloresDedicatoria);
+          let color = random(coloresTexto);
           dedicatoriaHTML += `<span style="color:${color}">${c}</span>`;
         }
         document.getElementById("dedicatoria").innerHTML = dedicatoriaHTML;
