--- a/index.html
+++ b/index.html
@@ -81,13 +81,18 @@
         if (clickCount % 2 === 0) {
           fraseIndex = (fraseIndex + 1) % frases.length;
           mensajeActual = frases[fraseIndex];
+
+          // Actualizar todas las gotas con el nuevo mensaje
+          for (let g of gotas) {
+            g.texto = mensajeActual;
+          }
         }
         if (clickCount >= 30) {
           mostrarDedicatoria = true;
           document.getElementById("scrollContainer").style.pointerEvents = "auto";
         }
 
-        // Crear explosión en la posición del clic
+        // Crear explosión tipo fuegos artificiales
         let particulas = [];
         for (let i = 0; i < 30; i++) {
           particulas.push({
@@ -106,13 +111,13 @@
     function draw() {
       background(0, 100);
 
-      // Mostrar contador
+      // Contador
       fill(255);
       textSize(20);
       textAlign(LEFT, TOP);
       text("Clics: " + clickCount, 20, 20);
 
-      // Lluvia de frases
+      // Lluvia
       if (!mostrarDedicatoria) {
         textAlign(CENTER, CENTER);
         textSize(28);
@@ -121,18 +126,23 @@
           let x = random(width);
           let y = -50;
           let speed = random(2, 6);
-          gotas.push({ x, y, speed, alpha: 255 });
+          gotas.push({ x, y, speed, alpha: 255, texto: mensajeActual });
         }
 
         for (let i = gotas.length - 1; i >= 0; i--) {
           let g = gotas[i];
-          let totalWidth = textWidth(mensajeActual);
-          for (let j = 0; j < mensajeActual.length; j++) {
-            let letra = mensajeActual[j];
+          let txt = g.texto;
+          let totalWidth = textWidth(txt);
+
+          // Dibujar cada letra con color distinto
+          let startX = g.x - totalWidth / 2;
+          for (let j = 0; j < txt.length; j++) {
+            let letra = txt[j];
             let color = random(coloresTexto);
             fill(color + hex(g.alpha, 2));
-            text(letra, g.x - totalWidth / 2 + textWidth(mensajeActual.slice(0, j)), g.y);
+            text(letra, startX + textWidth(txt.slice(0, j)), g.y);
           }
+
           g.y += g.speed;
           g.alpha -= 1.5;
           if (g.alpha <= 0 || g.y > height + 50) {
@@ -140,7 +150,7 @@
           }
         }
 
-        // Explosiones tipo fuegos artificiales
+        // Explosiones
         for (let e = explosiones.length - 1; e >= 0; e--) {
           let particulas = explosiones[e];
           for (let p of particulas) {
