--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>Para Yareni</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       overflow: hidden;
       background: black;
       color: white;
+      font-family: 'Poppins', sans-serif;
     }
     #scrollContainer {
       position: absolute;
@@ -30,53 +32,44 @@
       display: block;
     }
   </style>
-  <!-- Fuente Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/addons/p5.sound.min.js"></script>
 </head>
 <body>
   <div id="scrollContainer">
     <div id="dedicatoria"></div>
   </div>
   <script>
-    let frases = ["Hola Yareni :)", "Feliz cumpleaños"];
-    let gotas = [];
+    let frases = ["Hola Yareni ;)", "Feliz cumpleaños"];
     let clickCount = 0;
-    let mensajeActual = frases[0];
+    let fraseIndex = 0;
+    let gotas = [];
     let mostrarDedicatoria = false;
     let mensajeFinalizado = false;
-    let indexLetra = 0;
-    let textoVisible = "";
+
     let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te haya gustado el código que te hice :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá tener la oportunidad de conocernos más muy pronto ... Atte Caleb ... Por cierto hace mucho que no hacía una carta o algo de ese estilo ...";
+    let textoVisible = "";
+    let indexLetra = 0;
+    let tiempoEscritura = 0;
+    let velocidadEscritura = 100;
+    let borrando = false;
+    let borrarDesde = null;
+    let borrarHasta = null;
+    let esperando = false;
+    let tiempoEspera = 0;
+    let finalizado = false;
+    let borrandoFinal = false;
+    let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"]; // Rosa, fucsia, violeta
+
     let partesABorrar = [
       { texto: "Se te quiere", borrado: false },
       { texto: "Se te extraña", borrado: false }
     ];
-    let borrando = false, borrandoFinal = false, esperando = false;
-    let borrarDesde = null, borrarHasta = null;
-    let tiempoEscritura = 0;
-    let velocidadEscritura = 100;
-    let tiempoEspera = 0;
-    let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"];
-    let fuenteMusical;
-    let sonidoFondo;
-
-    function preload() {
-      sonidoFondo = loadSound("A-ha - Take On Me (Acoustic)  Subtitulada al Español.mp3");
-    }
 
     function setup() {
       createCanvas(windowWidth, windowHeight);
-      textSize(28);
+      textSize(26);
       textAlign(CENTER, CENTER);
       textFont('Poppins');
-
-      // Música
-      if (sonidoFondo) {
-        sonidoFondo.setVolume(0.4);
-        sonidoFondo.loop();
-      }
     }
 
     function windowResized() {
@@ -84,59 +77,90 @@
     }
 
     function mousePressed() {
-      clickCount++;
-      fraseIndex = (clickCount % frases.length);
-      mensajeActual = frases[fraseIndex];
+      if (!mostrarDedicatoria) {
+        clickCount++;
+        if (clickCount % 2 === 0) {
+          fraseIndex = (fraseIndex + 1) % frases.length;
+          for (let g of gotas) {
+            g.texto = frases[fraseIndex];
+          }
+        }
+        if (clickCount >= 30) {
+          mostrarDedicatoria = true;
+          document.getElementById("scrollContainer").style.pointerEvents = "auto";
+        }
 
-      // Cambiar todas las gotas activas al nuevo mensaje
-      for (let g of gotas) {
-        g.texto = mensajeActual;
-      }
-
-      if (clickCount >= 30) {
-        mostrarDedicatoria = true;
-        document.getElementById("scrollContainer").style.pointerEvents = "auto";
+        // Explosión
+        for (let i = 0; i < 20; i++) {
+          let ang = random(TWO_PI);
+          let speed = random(2, 6);
+          gotas.push({
+            x: mouseX,
+            y: mouseY,
+            dx: cos(ang) * speed,
+            dy: sin(ang) * speed,
+            texto: frases[fraseIndex],
+            alpha: 255,
+            explosion: true
+          });
+        }
       }
     }
 
     function draw() {
       background(0, 100);
 
+      // Mostrar contador
       fill(255);
       textSize(20);
       textAlign(LEFT, TOP);
       text("Clics: " + clickCount, 20, 20);
 
+      // Lluvia
       if (!mostrarDedicatoria) {
-        textSize(28);
         textAlign(CENTER, CENTER);
-
-        if (frameCount % 5 === 0) {
+        textSize(24);
+        if (frameCount % 8 === 0) {
           let x = random(width);
-          let y = -50;
-          let speed = random(2, 5);
-          let color = random(coloresTexto);
-          gotas.push({ x, y, speed, texto: mensajeActual, color });
+          let y = -30;
+          let speed = random(2, 4);
+          gotas.push({
+            x: x,
+            y: y,
+            speed: speed,
+            alpha: 255,
+            texto: frases[fraseIndex],
+            explosion: false
+          });
         }
 
         for (let i = gotas.length - 1; i >= 0; i--) {
           let g = gotas[i];
-          fill(g.color);
+          let color = random(coloresTexto);
+          fill(color + hex(g.alpha, 2));
           text(g.texto, g.x, g.y);
-          g.y += g.speed;
-          if (g.y > height + 50) gotas.splice(i, 1);
+
+          if (g.explosion) {
+            g.x += g.dx;
+            g.y += g.dy;
+            g.alpha -= 5;
+          } else {
+            g.y += g.speed;
+            g.alpha -= 1.5;
+          }
+
+          if (g.alpha <= 0 || g.y > height + 50) {
+            gotas.splice(i, 1);
+          }
         }
       }
 
+      // Dedicatoria
       if (mostrarDedicatoria && !borrandoFinal) {
         if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
           textoVisible += textoBase[indexLetra];
           indexLetra++;
           tiempoEscritura = millis();
-
-          if (textoVisible.endsWith(",") || textoVisible.endsWith("...")) {
-            tiempoEscritura += 1000;
-          }
         }
 
         for (let parte of partesABorrar) {
@@ -179,7 +203,7 @@
         let dedicatoriaHTML = "";
         for (let c of textoVisible) {
           let color = random(coloresTexto);
-          dedicatoriaHTML += `<span style="color:${color}">${c}</span>`;
+          dedicatoriaHTML += <span style="color:${color}">${c}</span>;
         }
         document.getElementById("dedicatoria").innerHTML = dedicatoriaHTML;
       }
